--- a/css/main.css
+++ b/css/main.css
@@ -1,63 +1,162 @@
 :root {
-    --main-background-color: #E9EFEC;
-    --card-background-color: #C4DAD2;
-    --primary-dark: #16423C;
-    --primary-light: #6A9C89;
-  }
+  --main-background-color: #e9efec;
+  --card-background-color: #c4dad2;
+  --primary-dark: #16423c;
+  --primary-light: #6a9c89;
+}
 
 * {
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
+
 body {
-    background-color: var(--main-background-color);
+  background-color: var(--main-background-color);
+  overflow-y: hidden;
 }
+
 .main-section {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .start {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 10rem;
-    justify-content: space-around;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 10rem;
+  justify-content: space-around;
+  transition-duration: 2000ms;
+  position: fixed;
+  z-index: 2;
+  /* display: none; */
 }
+
 .start-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    height: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  height: 5rem;
 }
+
 .start-text h3 {
-    font-size: 1.8rem;
+  font-size: 1.8rem;
 }
-.start-text h3 span {
-    font-size: 2.2rem;
-    color: var(--primary-dark);
+
+.start-text h3 .logo {
+  font-size: 2.2rem;
+  color: var(--primary-dark);
+  transition-duration: 2000ms;
 }
+
 .start-text p {
-    font-size: 1.15rem;
+  font-size: 1.15rem;
 }
+
 .start button {
-    width: 10rem;
-    height: 2.6rem;
-    cursor: pointer;
-    color: var(--primary-dark);
-    background-color: var(--card-background-color);
-    border: 2px solid var(--primary-dark);
-    border-radius: 0.5rem;
-    font-size: 1rem;
-    font-weight: 500;
-    transition-duration: 100ms;
+  width: 10rem;
+  height: 2.6rem;
+  cursor: pointer;
+  color: var(--primary-dark);
+  background-color: var(--card-background-color);
+  border: 2px solid var(--primary-dark);
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  font-weight: 500;
+  transition-duration: 100ms;
 }
+
 .start button:hover {
-    background-color: var(--primary-dark);
-    color: var(--main-background-color);
+  background-color: var(--primary-dark);
+  color: var(--main-background-color);
+}
+
+.list-container {
+  width: 25vw;
+  height: 70vh;
+  background-color: var(--card-background-color);
+  margin: 0 1.5rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
+
+.lists-parent {
+  /* width: 100vw; */
+  height: 70vh;
+  display: flex;
+  margin-top: 15vh;
+  align-items: center;
+  justify-content: center;
+  /* overflow: hidden; */
+  position: relative;
+  left: 0;
+}
+.lists-parent-parent {
+  display: flex;
+  align-items: center;
+  overflow-x: scroll;
+}
+
+.list-container .list-title {
+  border: none;
+  background-color: var(--card-background-color);
+  text-align: center;
+  font-size: 1.5rem;
+  width: 90%;
+  /* border-radius: 2rem; */
+  margin: 1rem;
+  font-weight: 500;
+  outline: none;
+}
+
+.list-container .list-title:focus {
+  border-bottom: 2px solid #16423c;
+}
+
+.addbtn {
+  background-color: var(--primary-dark);
+  color: var(--main-background-color);
+  width: 3.3rem;
+  height: 3.3rem;
+  border-radius: 2rem;
+  margin-left: 1rem;
+  margin-right: 2rem;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.7rem;
+  cursor: pointer;
+  transition-duration: 200ms;
+  text-align: center;
+  border: 0.2rem solid var(--primary-dark);
+}
+
+.addbtn:hover {
+  background-color: var(--card-background-color);
+  color: var(--primary-dark);
+}
+
+.addbtnparent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  display: none;
+  opacity: 0;
+  transition-duration: 800ms;
+}
+
+.addbtnparent p {
+  color: #000000;
+  font-size: 1rem;
+  margin-top: 1rem;
 }
